feat: adicionando elk
