# pedidos/routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\CustomerController;
 use App\Http\Controllers\Api\OrderController;
+use App\Http\Controllers\Api\SupplierController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -21,4 +22,5 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::resource('customers', CustomerController::class, ['except' => ['create', 'edit']]);
+Route::resource('suppliers', SupplierController::class, ['except' => ['create', 'edit']]);
 Route::resource('orders', OrderController::class, ['except' => ['create', 'edit']]);
